grafana/grafana-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  labels:
    app: grafana
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  selector:
    app: grafana

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
spec:
  rules:
    - host: grafana.livefire.corp.local
      http:
        paths:
        - backend:
            serviceName: grafana
            servicePort: 80
